--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
-* {
+*,::after, ::before  {
 	padding: 0;margin: 0;color: #000;
+    box-sizing: border-box;
 }
 body {
 	font-family: "微软雅黑";
