--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -2,9 +2,9 @@
 *,::after, ::before  {
 	padding: 0;margin: 0;color: #000;
     box-sizing: border-box;
+    font-family: "微软雅黑";
 }
 body {
-	font-family: "微软雅黑";
 	width: 100%;height: 100%;
 	overflow: hidden;
 }
@@ -19,7 +19,8 @@ button {
 }
 button:hover {
 	background-color: red;
-	color: #ff5;
+	color: #fff;
+	cursor: pointer;
 }
 i {
 	color: #2d062f;
